add clean script

--- a/tox.ini
+++ b/tox.ini
@@ -9,9 +9,12 @@
 # this directory.
 
 [tox]
-envlist = lint,py27,py34
+envlist = lint, py27, py35
 
 [testenv]
+basepython =
+    py27: python2.7
+    py35: python3.5
 usedevelop=True
 deps =
      --requirement
@@ -21,7 +24,6 @@ deps =
 commands = {toxinidir}/tools/test.sh
 
 [testenv:lint]
-basepython = python
 deps =
      --requirement
      {toxinidir}/requirements.txt
@@ -30,16 +32,14 @@ deps =
 commands = {toxinidir}/tools/lint.sh
 
 [testenv:docs]
-basepython = python
 deps =
      --requirement
      {toxinidir}/requirements.txt
      --requirement
      {toxinidir}/doc-requirements.txt
-commands = {toxinidir}/tools/documentation.sh
+commands = {toxinidir}/tools/docs.sh
 
 [testenv:release]
-basepython = python
 deps =
      --requirement
      {toxinidir}/requirements.txt
