Add test script

--- a/tox.ini
+++ b/tox.ini
@@ -9,40 +9,55 @@
 # this directory.
 
 [tox]
-envlist = lint, py27, py35
+envlist = lint,py{27,35}
 
-[testenv]
-basepython =
-    py27: python2.7
-    py35: python3.5
-usedevelop=True
+[base]
 deps =
      --requirement
      {toxinidir}/requirements.txt
+[testenv]
+usedevelop=True
+basepython =
+    py27,lint,docs,release: python2.7
+    py35,lint35,docs35,release35: python3.5
+deps =
+     {[base]deps}
      --requirement
      {toxinidir}/test-requirements.txt
 commands = {toxinidir}/tools/test.sh
 
 [testenv:lint]
-deps =
-     --requirement
-     {toxinidir}/requirements.txt
-     --requirement
-     {toxinidir}/test-requirements.txt
+deps = {[testenv]deps}
+commands = {toxinidir}/tools/lint.sh
+
+[testenv:lint35]
+deps = {[testenv]deps}
 commands = {toxinidir}/tools/lint.sh
 
 [testenv:docs]
 deps =
+     {[base]deps}
      --requirement
-     {toxinidir}/requirements.txt
+     {toxinidir}/doc-requirements.txt
+commands = {toxinidir}/tools/docs.sh
+
+[testenv:docs35]
+deps =
+     {[base]deps}
      --requirement
      {toxinidir}/doc-requirements.txt
 commands = {toxinidir}/tools/docs.sh
 
 [testenv:release]
 deps =
+     {[base]deps}
      --requirement
-     {toxinidir}/requirements.txt
+     {toxinidir}/release-requirements.txt
+commands = {toxinidir}/tools/release.sh
+
+[testenv:release35]
+deps =
+     {[base]deps}
      --requirement
      {toxinidir}/release-requirements.txt
 commands = {toxinidir}/tools/release.sh
