Add napoleon sphinx extension

--- a/tox.ini
+++ b/tox.ini
@@ -24,40 +24,40 @@ deps =
      {[base]deps}
      --requirement
      {toxinidir}/test-requirements.txt
-commands = {toxinidir}/tools/test.sh
+commands = sh {toxinidir}/tools/test.sh
 
 [testenv:lint]
 deps = {[testenv]deps}
-commands = {toxinidir}/tools/lint.sh
+commands = sh {toxinidir}/tools/lint.sh
 
 [testenv:lint35]
 deps = {[testenv]deps}
-commands = {toxinidir}/tools/lint.sh
+commands = sh {toxinidir}/tools/lint.sh
 
 [testenv:docs]
 deps =
      {[base]deps}
      --requirement
      {toxinidir}/doc-requirements.txt
-commands = {toxinidir}/tools/docs.sh
+commands = sh {toxinidir}/tools/docs.sh
 
 [testenv:docs35]
 deps =
      {[base]deps}
      --requirement
      {toxinidir}/doc-requirements.txt
-commands = {toxinidir}/tools/docs.sh
+commands = sh {toxinidir}/tools/docs.sh
 
 [testenv:release]
 deps =
      {[base]deps}
      --requirement
      {toxinidir}/release-requirements.txt
-commands = {toxinidir}/tools/release.sh
+commands = sh {toxinidir}/tools/release.sh
 
 [testenv:release35]
 deps =
      {[base]deps}
      --requirement
      {toxinidir}/release-requirements.txt
-commands = {toxinidir}/tools/release.sh
+commands = sh {toxinidir}/tools/release.sh
