Renamed requirements-files to be sortable

--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ basepython =
 deps =
      {[base]deps}
      --requirement
-     {toxinidir}/test-requirements.txt
+     {toxinidir}/requirements-test.txt
 commands = {toxinidir}/tools/test.sh
 
 [testenv:lint]
@@ -38,26 +38,26 @@ commands = {toxinidir}/tools/lint.sh
 deps =
      {[base]deps}
      --requirement
-     {toxinidir}/doc-requirements.txt
+     {toxinidir}/requirements-doc.txt
 commands = {toxinidir}/tools/docs.sh
 
 [testenv:docs35]
 deps =
      {[base]deps}
      --requirement
-     {toxinidir}/doc-requirements.txt
+     {toxinidir}/requirements-doc.txt
 commands = {toxinidir}/tools/docs.sh
 
 [testenv:release]
 deps =
      {[base]deps}
      --requirement
-     {toxinidir}/release-requirements.txt
+     {toxinidir}/requirements-release.txt
 commands = {toxinidir}/tools/release.sh
 
 [testenv:release35]
 deps =
      {[base]deps}
      --requirement
-     {toxinidir}/release-requirements.txt
+     {toxinidir}/requirements-release.txt
 commands = {toxinidir}/tools/release.sh
