Simplified default tox.ini and updated helper scripts

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@
 # this directory.
 
 [tox]
-envlist = lint,py{27,35}
+envlist = py27,py35
 
 [base]
 deps =
@@ -19,8 +19,8 @@ deps =
 [testenv]
 usedevelop=True
 basepython =
-    py27,lint,docs,release: python2.7
-    py35,lint35,docs35,release35: python3.5
+    py27: python2.7
+    py35: python3.5
 deps =
      {[base]deps}
      --requirement
@@ -30,35 +30,3 @@ commands = {toxinidir}/tools/test.sh
 [testenv:lint]
 deps = {[testenv]deps}
 commands = {toxinidir}/tools/lint.sh
-
-[testenv:lint35]
-deps = {[testenv]deps}
-commands = {toxinidir}/tools/lint.sh
-
-[testenv:docs]
-deps =
-     {[base]deps}
-     --requirement
-     {toxinidir}/requirements-doc.txt
-commands = {toxinidir}/tools/docs.sh
-
-[testenv:docs35]
-deps =
-     {[base]deps}
-     --requirement
-     {toxinidir}/requirements-doc.txt
-commands = {toxinidir}/tools/docs.sh
-
-[testenv:release]
-deps =
-     {[base]deps}
-     --requirement
-     {toxinidir}/requirements-release.txt
-commands = {toxinidir}/tools/release.sh
-
-[testenv:release35]
-deps =
-     {[base]deps}
-     --requirement
-     {toxinidir}/requirements-release.txt
-commands = {toxinidir}/tools/release.sh
