--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@
 # this directory.
 
 [tox]
-envlist = py27,py35
+envlist = py27,py34,py35
 
 [base]
 deps =
@@ -20,6 +20,7 @@ deps =
 usedevelop=True
 basepython =
     py27: python2.7
+    py34: python3.4
     py35: python3.5
 deps =
      {[base]deps}
