Remove the stuff I always modify anyway

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@
 # this directory.
 
 [tox]
-envlist = py27,py34,py35
+envlist = py36
 
 [base]
 deps =
@@ -22,12 +22,9 @@ basepython =
     py27: python2.7
     py34: python3.4
     py35: python3.5
+    py36: python3.6
 deps =
      {[base]deps}
-     --requirement
-     {toxinidir}/requirements-test.txt
-commands = {toxinidir}/tools/test.sh
 
-[testenv:lint]
-deps = {[testenv]deps}
-commands = {toxinidir}/tools/lint.sh
+commands =
+    {toxinidir}/tools/test.sh
