Add readme template and tox utilities

--- a/tox.ini
+++ b/tox.ini
@@ -19,12 +19,35 @@ deps =
 [testenv]
 usedevelop=True
 basepython =
-    py27: python2.7
-    py34: python3.4
-    py35: python3.5
     py36: python3.6
 deps =
      {[base]deps}
+     pytest
+     coverage
+commands = {toxinidir}/tools/test.sh
 
-commands =
-    {toxinidir}/tools/test.sh
+[testenv:docs]
+basepython = python3.6
+deps =
+    {[testenv]deps}
+    Sphinx
+    sphinxcontrib-napoleon
+commands = {toxinidir}/tools/docs.sh
+
+[testenv:typecheck]
+basepython = python3.6
+deps =
+    {[testenv]deps}
+    mypy
+setenv =
+    MYPYPATH={toxinidir}/stubs
+commands = {toxinidir}/tools/typecheck.sh
+
+[testenv:build]
+basepython = python3.6
+commands = python {toxinidir}/setup.py bdist_wheel
+
+[testenv:devenv]
+envdir = {toxinidir}/devenv
+basepython = python3.6
+commands = {posargs:{toxinidir}/tools/test.sh}
